--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react-dom": "^17.0.0",
     "antd": "^4.11.2",
     "axios": "^0.21.1",
+    "echarts": "^5.0.2",
+    "echarts-for-react": "^3.0.0",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "react": "^17.0.1",
