--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "echarts": "^5.0.2",
     "echarts-for-react": "^3.0.0",
+    "js-cookie": "^2.2.1",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "react": "^17.0.1",
@@ -27,6 +28,8 @@
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.6",
+    "@types/mockjs": "^1.0.3",
     "@types/nprogress": "^0.2.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
